# Personal-Finance-Assistant

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SPEC.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  finance_qa_agent.py  goal_planning_agent.py  market_analysis_agent.py  news_synthesizer_agent.py  portfolio_analysis_agent.py  registry.py  tax_education_agent.py
config/: __init__.py  workflow.py
integrations/: __init__.py  market_data.py  rag_pipeline.py
knowledge_base/: faiss_index.pkl  financial_knowledge_base.json
mcp_server/: __init__.py  server.py
tests/: __init__.py  test_agents.py
ui/: app.py
utils/: guardrails.py  trace_logger.py
