[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "personal-finance-assistant"
version = "1.0.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "config*", "integrations*", "utils*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["agents", "config", "integrations", "utils"]
omit = ["tests/*", "mcp_server/*", "ui/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
